--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -25,18 +25,22 @@ body {
 	}
 	.form-group {
 		position: relative;
-		margin: 0 0 22px 0;
+		margin: 0 0 60px 0;
 		padding: 22px 22px 12px 22px;
 		border-radius: 5px;
 	}
 	.form-group-title {
-		background-color: white;
-		margin: -15px 100% -1px 2px;
+		margin: -15px 0 -1px 2px;
 		padding-right: 20px;
+		width: 100%;
 		color: #609ac1;
 		font-size: 1.75rem;
 		z-index: 3;
 		user-select: none;
+	}
+	.form-group-title-text {
+		background-color: white;
+		padding-right: 20px;
 	}
 	.form-group-divider {
 		position: absolute;
@@ -45,7 +49,6 @@ body {
 		width: 94%;
 		margin-left: 2px;
 		border-top: 2px solid #a7dcff;
-		z-index: 2;
 	}
 	.form-group-divider-edit {
 		position: absolute;
@@ -54,6 +57,7 @@ body {
 		height: 24px;
 		width: 60px;
 		background-color: white;
+		z-index: 4;
 	}
 	.form-group-divider-edit svg {
 		float: right;
@@ -247,6 +251,54 @@ body {
 	.input-required-failed ~ .input-required-select,
 	.input-required-failed ~ .input-required-radio {
 		display: block;
+	}
+	.input-fieldset-checkbox-label {
+		/* position: absolute; */
+		/* top: -12px; */
+		/* left: 22px; */
+		/* z-index: 1; */
+		padding: 0px 8px;
+		/* margin-bottom: 0; */
+		/* background-color: white; */
+		color: #4d4d4d;
+		font-size: 0.875rem;
+		/* border-radius: 10px; */
+		user-select: none;
+		/* transition: all .075s; */
+		/* pointer-events: none; */
+	}
+	input[type="checkbox"] {
+		opacity: 0;
+		height: 0;
+		width: 0;
+	}
+	.input-label-format-checkbox {
+		padding: 0px 12px;
+		cursor: pointer;
+		user-select: none;
+	}
+	.input-label-format-checkbox-text {
+		position: relative;
+		top: 1px;
+		left: 5px;
+	}
+	.input-format-checkbox-display {
+		display: inline-block;
+		height: 28px;
+		width: 28px;
+		padding: 1px;
+		border: 1px solid #accbff;
+		border-radius: 6px;
+		box-shadow: 0 0 2px -1px #246ef0;
+		cursor: pointer;
+	}
+	.input-format-checkbox-display svg {
+		opacity: 0;
+		color: #144497;
+		transition: linear .075s all;
+	}
+	.input-label-format-checkbox input[type="checkbox"]:checked ~ .input-format-checkbox-display svg {
+		opacity: 1;
 	}
 
 /* Navigation Bar */
@@ -784,11 +836,11 @@ body {
 	}
 	.dash-content {
 		padding: 12px 12px;
-			background-color: white;
+		background-color: white;
 		border: 1px solid #90b3f0;
 		border-radius: 6px;
 		box-shadow: 0 0 2px 0px #737373;
-		}
+	}
 	/* Notification */
 		#dash-notif .dash-content {
 			overflow-x: hidden;
@@ -1014,7 +1066,7 @@ body {
 	}
 	@media only screen and (min-width: 0px) and (max-width: 1300px) {
 		.logs-table-container {
-		width: 100%;
+			width: 100%;
 		}
 	}
 	.logs-table-container-extend {
@@ -1089,6 +1141,9 @@ body {
 
 /* Print Formatting */
 	@media only print {
+		.page-break {
+			page-break-after: always;
+		}
 		html {
 			-webkit-print-color-adjust: exact;
 		}
