--- a/comps/css/index.css
+++ b/comps/css/index.css
@@ -7,7 +7,7 @@ body {
 	[v-cloak] {
 		display: none;
 	}
-	
+
 /* Inputs */
 	.section-divider {
 		height: 0;
@@ -27,22 +27,24 @@ body {
 		background-color: white;
 		position: relative;
 		margin: 0 0 18px 0;
-		padding: 21px 22px 12px 22px;
+		padding: 0;
 		border-radius: 6px;
-		box-shadow: 0 0 2px 0px #818181 inset;
+		border: 1px solid #dadada;
+		overflow: hidden;
 	}
 	.form-group-title {
-		margin: -15px 0 -1px -6px;
+		display: flex;
 		padding-right: 20px;
 		width: 100%;
 		color: #003d65;
 		font-size: 1.75rem;
-		z-index: 3;
 		user-select: none;
 	}
 	.form-group-title-text {
-		background-color: white;
-		padding-right: 20px;
+		background-color: #f6f6fa;
+		padding: 2px 16px;
+		box-shadow: 0px 0px 2px #818181;
+		border-radius: 0 0 6px 0;
 	}
 	.form-group-divider {
 		position: absolute;
@@ -77,18 +79,18 @@ body {
 	}
 	.input-label-format {
 		position: absolute;
-		top: -12px;
+		top: -10px;
 		left: 22px;
 		z-index: 1;
 		padding: 0px 8px;
 		margin-bottom: 0;
 		background-color: white;
 		color: #4d4d4d;
-		font-size: 0.875rem;
+		font-size: 0.75rem;
 		border-radius: 10px;
 		user-select: none;
 		pointer-events: none;
-		transition: linear all .1s;
+		transition: linear all .05s;
 	}
 	.form-group .input-label-format {
 		left: 12px;
@@ -110,8 +112,8 @@ body {
 	.input-format, .input-format-select, .input-format-textarea {
 		font-size: 1.1rem;
 		border-radius: 6px;
-		border: 1px solid #c2c7cb;
-		box-shadow: inset 0 0 2px lightgrey;
+		border: 1px solid #d7d9db;
+		box-shadow: inset 0 0 2px #e3e3e3;
 		transition: linear all .1s;
 	}
 	.input-format:disabled,
@@ -688,7 +690,7 @@ body {
 		.table-body .table-row td:nth-child(8) {
 			display: none;
 		}
-	
+
 		.row-icons svg {
 			color: rgb(92, 92, 92);
 			transform: scale(1);
@@ -1034,7 +1036,7 @@ body {
 		top: 4px;
 	}
 	.complaint-form-header-status .input-label-format {
-		left: 8px;
+		left: 6px;
 	}
 	@keyframes alert-neutral {
 		0% {
